@startuml

left to right direction
skinparam classAttributeIconSize 0
hide empty methods
hide empty attributes

class Test{
- code
- NhsCode
- dateOfTestRegistration
- dateOfSamplesCollection
- dateOfChemicalAnalysis
- dateOfDiagnosis
}

class Company {
-designation
}

class ParameterCategory{
  -code
  -name
}

class Receptionist{}

class Sample{
- barCode
}

class Client{
- name
- citizenCardNum
- nhsNum
- birthDate
- sex
- taxIdNum
- phoneNum
- email
}
class TestParameter{}
class TestParameterResult{
- createdAt
- value
- metric
}
class TestType{
- Code
- Description
- Collecting methods
}

class Parameter{
- code
- shortName
- description
}

class ClinicalAnalysisLaboratory{
- laboratoryID
}

Test "*" -- "1" TestType : classified as >
Report "1" -- "1" Test : is of >
Test "*" -- "1" Client : requested by >
Receptionist "1" -- "*" Test : registers >
Parameter "*" -- "1" ParameterCategory: presented under >
TestType "1" -- "1..*" ParameterCategory : characterized by >
Test "1" -- "1..*" Sample : collects >
Test "1" -- "1..*" TestParameter : requests analysis of >
TestParameter "*" -- "1" Parameter : refers to >
TestParameter "1" -- "0..1" TestParameterResult : contains >
ClinicalAnalysisLaboratory "1" -- "1..*" TestType : operates >
ClinicalAnalysisLaboratory "1" -- "1..*" Test : performs >
Company "1" --- "*" Test : conducts >
@enduml